feat(meta): modifie les meta textes et images

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
     <meta name="robots" content="noindex, nofollow" />
 
-    <title>Ionic Full Starter App</title>
+    <title>Elistes - Communauté de partage de listes</title>
 
     <base href="/" />
 
@@ -18,9 +18,9 @@
 
     <meta
       name="description"
-      content="Ionic 5 Full Starter App Template - by IonicThemes"
+      content="Elistes est une application web et mobile qui permet de créer, partager ou exporter des listes de données, peu importe le sujet"
     />
-    <meta name="keywords" content />
+    <meta name="keywords" content="partage, liste" />
     <!-- favicon -->
     <!-- If you have a multi size .ico file -->
     <link
@@ -28,82 +28,12 @@
       sizes="128x128 64x64 48x48 32x32 24x24 16x16"
       href="assets/icon/favicon.ico"
     />
-    <!-- If you don't -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="128x128"
-      href="assets/icon/favicon-128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="64x64"
-      href="assets/icon/favicon-64x64.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="assets/icon/favicon-48x48.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/icon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="24x24"
-      href="assets/icon/favicon-24x24.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/icon/favicon-16x16.png"
-    />
 
     <!-- add to homescreen for ios -->
-
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-
-    <!-- icons for ios pwa -->
-
-    <!-- spalsh for ios pwa -->
-    <!-- Default@2x~iphone -->
-
-    <!-- Default-568h@2x~iphone.png -->
-
-    <!-- Default-667h -->
-
-    <!-- Default-736h -->
-
-    <!-- Default-Portrait~ipad -->
-
-    <!-- Default-Portrait@2x~ipad -->
-
-    <!-- Default-Portrait@~ipadpro -->
-
-    <!-- Traditional way was inconsistent, trying an approach with media attribute -->
-    <!-- (see: https://stackoverflow.com/a/51330076/1116959) -->
-
-    <!-- 750x1294 -->
-
-    <!-- 1242x2148 -->
-
-    <!-- <link rel="apple-touch-startup-image" href="images/splash/launch-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"> -->
-
-    <!-- <link rel="apple-touch-startup-image" href="images/splash/launch-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)"> -->
-
-    <!-- Android uses the icon with a background-color specified in the app manifest as the splash screen -->
-    <!-- (see: https://developers.google.com/web/tools/lighthouse/audits/custom-splash-screen) -->
-
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#000000" />
 
@@ -115,24 +45,42 @@
     <!-- SEO meta tags -->
     <!-- Schema -->
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
-    <meta name="DC.title" content="Your App Title" />
-    <meta name="DC.description" content="Your app description" />
+    <meta name="DC.title" content="Elistes - Communauté de partage de listes" />
+    <meta name="DC.description" content="Communauté de partage de listes" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@yourTwAccount" />
-    <meta name="twitter:creator" content="@yourTwAccount" />
-    <meta name="twitter:title" content="Your App Title" />
-    <meta name="twitter:description" content="Your app description" />
-    <meta name="twitter:image" content />
+    <meta name="twitter:site" content="@e_listes" />
+    <meta name="twitter:creator" content="@e_listes" />
+    <meta
+      name="twitter:title"
+      content="Elistes - Communauté de partage de listes"
+    />
+    <meta
+      name="twitter:description"
+      content="Elistes est une application web et mobile qui permet de créer, partager ou exporter des listes de données, peu importe le sujet"
+    />
+    <meta
+      name="twitter:image"
+      content="assets/sample-images/elistes-app-icone.png"
+    />
 
     <!-- Facebook / Open Graph -->
-    <meta property="og:title" content="Your App Title" />
+    <meta
+      property="og:title"
+      content="Elistes - Communauté de partage de listes"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content />
-    <meta property="og:description" content="Your app description" />
-    <meta property="og:url" content />
-    <meta property="og:site_name" content="YourSiteName" />
+    <meta
+      property="og:image"
+      content="assets/sample-images/elistes-app-icone.png"
+    />
+    <meta
+      property="og:description"
+      content="Elistes est une application web et mobile qui permet de créer, partager ou exporter des listes de données, peu importe le sujet"
+    />
+    <meta property="og:url" content="https://elistes.web.app/" />
+    <meta property="og:site_name" content="Elistes" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -258,13 +206,13 @@
     <noscript>
       <h3
         style="
-          color: #32db64;
+          color: #e59500;
           font-family: sans-serif;
           font-weight: 600;
           margin: 2rem;
         "
       >
-        Sorry, but app is not available without javascript
+        Malheureusement, l'application nécessite JavaScript
       </h3>
     </noscript>
     <app-root></app-root>
